@@ -15,6 +15,8 @@
 * Bugfixes
 
   * Fixed a problem with nil passed to CDATA constructor
+  * Fragment method deals with regular expression characters
+    (Thanks Joel!) LH #73
 
 === 1.2.3 / 2009-03-22
 
